--- a/conferences/Fields25/index.html
+++ b/conferences/Fields25/index.html
@@ -82,7 +82,9 @@ This list will be updated and further annotated closer to the Fields workshop.
   <li><a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.111.L060101">Defect bound states in
       the continuum of bilayer electronic materials without symmetry protection</a>,
  D. Massatt, S.P. Shipman, I. Vekhter, J.H. Wilson, Physical Review B, 2025.<br>
-    <font color=maroon>[Stephen will provide some text here.]</font></li>
+    <font color=maroon>This paper uses reducibility of the Fermi variety to construct defect states embedded in the spectral
+      continuum.  Localization of the defect (p. 3) involves factorization of polynomial matrices <i>B</i>(<i>z</i>) and the
+      vanishing set of polynomial vectors of the form <i>B</i>(<i>z</i>)<i>v</i>(<i>z</i>)</font>.</li>
 
 <!--
  <li></li>
