--- a/research/stories/Bestiary/Bestiary.html
+++ b/research/stories/Bestiary/Bestiary.html
@@ -10,10 +10,10 @@
 <table border=0>
   <tr valign=top>
    <td rowspan=2>
-   <a href="/home/sottile/Repositories/CPoDPO/notPyramid_movie.gif"><IMG SRC="www_images/notPyramid_BV.gif" ALT="A Bloch variety" border=1></a>
+   <IMG SRC="notPyramid_BV.gif" ALT="A Bloch variety"></a>
    </td>
    <td width=40></td>
-    <td width=700>
+    <td width=800>
       <h1><a href=""></a>A Bestiary of Bloch Varieties</h1>
       <font size="+2"> 
       <a href="../../../index.html">Frank Sottile</a></font>
@@ -21,7 +21,7 @@
   </tr>
   <tr><td></td>
     <td>
-      To a <b>Z</b><sup>d</sup>-periodic weighted graph with vertices <i>V</i>, we may associated a periodic graph operator that acts on &ell;<sub>2</sub>(<i>V</i>). 
+      To a <b>Z</b><sup>d</sup>-periodic weighted graph with vertices <i>V</i>, we may associate a periodic graph operator that acts on &ell;<sub>2</sub>(<i>V</i>). 
       After Floquet transform, we obtain its Bloch variety, which is an algebraic hypersurface in <b>T</b><sup>d</sup>&times;<b>R</b>
       whose projection to <b>R</b> is the spectrum of the operator.
       Features on Bloch varieties such as Dirac (double) points, critical points, and their level sets (Fermi varieties)
@@ -37,9 +37,9 @@
 <table border=1>
   <tr>
     <td colspan=2><font size=+1>Hexagonal Graph</font></td>
-    <td rowspan=2><a href="Bestiary/hexagonal/111.eps"><img src="www_images/hexagonal_111.png"></a></td>
-    <td rowspan=2><a href="Bestiary/hexagonal/131_gap.eps"><img src="www_images/hexagonal_131_gap.png"></a></td>
-    <td rowspan=2><a href="Bestiary/hexagonal/523.eps"><img src="www_images/hexagonal_523.png"></a></td>
+    <td rowspan=2><img src="www_images/hexagonal_111.png"></a></td>
+    <td rowspan=2><img src="www_images/hexagonal_131_gap.png"></a></td>
+    <td rowspan=2><img src="www_images/hexagonal_523.png"></a></td>
   </tr>
   <tr>
     <td><a href="Bestiary/hexagonal/graph.eps"><img src="www_images/hexagonal_graph.png"></a></td>
@@ -59,12 +59,12 @@
 <table border=1>
   <tr>
     <td colspan=2><font size=+1>Bipartite, four edges</font></td>
-    <td rowspan=2><a href="www_images/fourEdges_4Dirac_movie.gif"><img src="www_images/fourEdges_4Dirac.png"></a></td>
-    <td rowspan=2><a href="Bestiary/fourEdges/2Dirac.eps"><img src="www_images/fourEdges_2Dirac.png"></a></td>
+    <td rowspan=2><img src="www_images/fourEdges_4Dirac.png"></a></td>
+    <td rowspan=2><img src="www_images/fourEdges_2Dirac.png"></a></td>
   </tr>
   <tr>    
-    <td><a href="Bestiary/fourEdges/graph.eps"><img src="www_images/fourEdges_graph.png"></a></td>
-    <td><a href="Bestiary/fourEdges/polytope.png"><img src="www_images/fourEdges_polytope.png"></a></td>
+    <td><img src="www_images/fourEdges_graph.png"></a></td>
+    <td><img src="www_images/fourEdges_polytope.png"></a></td>
   </tr>
 </table>
 <!---------------------------------------------------------------------------->
@@ -73,7 +73,7 @@
 <table border=1>
   <tr>
     <td colspan=2><font size=+1>Bipartite, five edges</font></td>
-    <td rowspan=2><a href="Bestiary/fiveEdges/FK.eps"><img src="www_images/FK.png" height=130pt></a></td>
+    <td rowspan=2><a href="www_images/FK.png"><img src="www_images/FK.png" height=130pt></a></td>
   </tr>
   <tr>
     <td><a href="Bestiary/fiveEdges/graph.eps"><img src="www_images/fiveEdges_graph.png"></a></td>
@@ -90,8 +90,8 @@
   <tr>
     <td><a href="Bestiary/twoComponents_I/graph.eps"><img src="www_images/twoComponents_I_graph.png"></a></td>
     <td><a href="Bestiary/twoComponents_I/polytope.png"><img src="www_images/twoComponents_I_polytope.png"></a></td>
-    <td><a href="Bestiary/twoComponents_I/movie_0111.gif"><img src="www_images/twoComponents_I_BV0111.png"></a> </td>
-    <td><a href="Bestiary/twoComponents_I/movie_1111.gif"><img src="www_images/twoComponents_I_BV1111.png" height=130pt></a> </td>
+    <td><img src="www_images/twoComponents_I_BV0111.png"></a> </td>
+    <td><img src="www_images/twoComponents_I_BV1111.png" height=130pt></a> </td>
   </tr>
 </table>
 <!---------------------------------------------------------------------------->
@@ -104,8 +104,8 @@
   <tr>
     <td><a href="Bestiary/twoComponents_II/graph.eps"><img src="www_images/twoComponents_II_graph.png"></a></td>
     <td><a href="Bestiary/twoComponents_II/polytope.png"><img src="www_images/twoComponents_II_polytope.png"></a></td>
-    <td><a href="Bestiary/twoComponents_II/movie_1.5.gif"><img src="www_images/twocomponents_II_BV_1.5.gif" height=140pt></a></td> 
-    <td><a href="Bestiary/twoComponents_II/movie_FK.gif"><img src="www_images/twocomponents_II_BV_FK.gif" height=140pt></a> </td>
+    <td><img src="www_images/twocomponents_II_BV_1.5.gif" height=140pt></a></td> 
+    <td><a href="www_images/twocomponents_II_BV_FK.gif"><img src="www_images/twocomponents_II_BV_FK.gif" height=140pt></a> </td>
   </tr>
 </table>
 <!---------------------------------------------------------------------------->
@@ -116,9 +116,9 @@
     <td colspan=3><font size=+1>Lieb Lattice&mdash;it has a <a href="https://arxiv.org/abs/2503.03632">flat band</a></font></td>
   </tr>
   <tr>
-    <td><a href="Bestiary/Lieb/graph.eps"><img src="www_images/Lieb_graph.png"></a></td>
+    <td><img src="www_images/Lieb_graph.png"></a></td>
     <td><a href="Bestiary/Lieb/polytope.png"><img src="www_images/Lieb_polytope.png"></a></td>
-    <td><a href="Bestiary/Lieb/BV.eps"><img src="www_images/Lieb_BV.png" height=140pt></a></td>
+    <td><a href="www_images/Lieb_BV.png"><img src="www_images/Lieb_BV.png" height=140pt></a></td>
   </tr>
 <table>
 <!---------------------------------------------------------------------------->
@@ -129,9 +129,9 @@
     <td colspan=3><font size=+1>Four Dirac points and reducible Fermi curve</a></font></td>
   </tr>
   <tr>
-    <td><a href="Bestiary/Laplacian_ODP/graph.eps"><img src="www_images/Laplacian_ODP_graph.png"></td>
+    <td><img src="www_images/Laplacian_ODP_graph.png"></td>
     <td><a href="Bestiary/Laplacian_ODP/polytope.png"><img src="www_images/Laplacian_ODP_polytope.png" height=110pt></td> 
-    <td><a href="Bestiary/Laplacian_ODP/Dirac_4.eps"><img src="www_images/Laplacian_ODP_Dirac_4.png" height=140pt></td>
+    <td><a href="www_images/Laplacian_ODP_Dirac_4.png"><img src="www_images/Laplacian_ODP_Dirac_4.png" height=140pt></td>
   </tr>
 <table>
 <!---------------------------------------------------------------------------->
@@ -144,7 +144,7 @@
   <tr>
     <td><a href="Bestiary/Vertical_two_squares_four_triangles/graph.eps"><img src="www_images/Vert2s4tr_graph.png"></a></td>
     <td><a href="Bestiary/Vertical_two_squares_four_triangles/polytope.png"><img src="www_images/Vert2s4tr_polytope.png"></a></td>
-    <td><a href="Bestiary/Vertical_two_squares_four_triangles/movie.gif"><img src="www_images/Vert2s4tr_BV.gif"></a></td>
+    <td><a href="Bestiary/Vertical_two_squares_four_triangles/BV.gif"><img src="www_images/Vert2s4tr_BV.gif"></a></td>
   </tr>
 <table>
 
@@ -155,10 +155,10 @@
   <tr>
     <td>K4 Graph</td>
     <td rowspan=2><a href="Bestiary/K4/polytope.png"><img src="www_images/K4_polytope.png"></a></td>
-    <td rowspan=2><a href="Bestiary/K4/BV.eps"><img src="www_images/K4_BV.png" height=130pt></a></td>
+    <td rowspan=2><img src="www_images/K4_BV.png" height=130pt></a></td>
   </tr>
   <tr>
-    <td> <a href="Bestiary/K4/graph.eps"><img src="www_images/K4_graph.png"></a></td>
+    <td> <img src="www_images/K4_graph.png"></a></td>
   </tr>
 </table>
 
@@ -172,19 +172,18 @@
   <tr>
     <td><a href="Bestiary/singHouse/graph.eps"><img src="www_images/singHouse_graph.png"></a></td>
     <td><a href="Bestiary/singHouse/polytope.png"><img src="www_images/singHouse_polytope.png"></a></td>
-    <td><a href="Bestiary/singHouse/BV_movie.gif"><img src="Bestiary/singHouse/BV.gif"></a></td>
-    <td><a href="Bestiary/singHouse/LtC_movie.gif"><img src="Bestiary/singHouse/LtC.gif"></a></td>
+    <td><a href="Bestiary/singHouse/BV_big.gif"><img src="Bestiary/singHouse/BV.gif"></a></td>
+    <td><a href="Bestiary/singHouse/LtC_big.gif"><img src="Bestiary/singHouse/LtC.gif" height=150pt></a></td>
   </tr>
 </table>    
 <!---------------------------------------------------------------------------->
-<hr>
+<hr> 
 <!---------------------------------------------------------------------------->
 <table border=1>
   <tr>
     <td>Random Graph</td>
     <td rowspan=2><img src="www_images/notPyramid.png"></a>
-    <td rowspan=2><a href="/home/sottile/Repositories/CPoDPO/notPyramid_movie.gif">
-        <IMG SRC="www_images/notPyramid_BV.gif" ALT="A Bloch variety" border=1></a></td>
+    <td rowspan=2><IMG SRC="www_images/notPyramid_BV.gif" ALT="A Bloch variety" border=1></a></td>
   </tr>
   <tr>
     <td><img src="www_images/notPyramidGraph.png"></td>
@@ -195,7 +194,7 @@
 <hr>
 <!---------------------------------------------------------------------------->
 <address></address>
-<i><!-- hhmts start -->Last modified: Wed Apr 13 08:45:15 CET 2023 <!-- hhmts end --></i>
+<i><!-- hhmts start -->Last modified: Fri May 2 16:45:15 CDT 2025 <!-- hhmts end --></i>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 
