--- a/talks.html
+++ b/talks.html
@@ -126,7 +126,16 @@
     <a href="talks/25/AG25.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Non-standard reality, an arbitrage opportunity</I></font>,
+    Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
+      Algebraic Geometry (AG25)</a>,  Minisymposium on Real solutions in numerical algebraic geometry,
+    Madison, Wisconsin, 7&ndash;11 July 2025.
+    <a href="talks/25/AG25_Real.txt">abstract</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Platonic solids in the next dimension</I></font>,
     Math Club, Texas A&amp;M University,
