--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -130,7 +130,8 @@ possibly concurrent.
       <li>11:10&mdash;11:40 &nbsp;
         <font color=blue>Lax's discriminant of a symmetric matrix is a sum of squares.</font> &nbsp; &nbsp;
 	   Pooja Joshi and Zeytoon  Kazemimoghaddam</li>
-      <li>11:50&mdash;12:20</li>
+      <li>11:50&mdash;12:20 &nbsp;
+	<font color=blue>The Shapiro Conjecture and the Wronski map.</font>  &nbsp; &nbsp; C.J. Bott and Daniel Dale</li>
       <li>12:30&mdash;13:00 &nbsp;
 	<font color=blue>A counterexample to the strong real Jacobian Conjecture.</font>  &nbsp; &nbsp;
 	Kevin Le and Jonah Robinson</li>
