--- a/research/stories/index.html
+++ b/research/stories/index.html
@@ -16,6 +16,9 @@
 <!---------------->
 <!---------------->
 <!--  These are all 150 points high  --->
+<!----- May 2025  ----------->
+<A HREF="Bestiary/Bestiary.html"><IMG SRC="Bestiary/notPyramid_BV.gif" height=150pt BORDER=2 ALT="A Bestiary of BLoch Varieties"></a>
+
 <!----- July 2024  ----------->
 <A HREF="LGalois/index.html"><IMG SRC="LGalois/images/TIe2ThI.4.png" height=150pt BORDER=2 ALT="Schubert Problem in LG4"></a>
 
