--- a/Journals.html
+++ b/Journals.html
@@ -3,7 +3,7 @@
 <link rel="shortcut icon" href="images/sottile.ico"> 
 <link href="images/frank.css" rel="stylesheet" type="text/css">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
+<BODY BGCOLOR="#FFFFFF" alink="#FFFFFF">
 
 
 <H2>Journals asked to serve as a referee</H2>
@@ -14,21 +14,31 @@
 <oL>
 <LI>ACM Transactions on Graphics</li>
 <li>Acta Math.</li>
+<li>Advances in Applied Clifford Algebras </li>
 <li>Advances in Applied Mathematics</li>
-<LI>Advances in Geometry   </li>
+<LI>Advances in Geometry </li>
 <LI>Advances in Mechanical Engineering </li>
-<LI>Advances in Mathematics  </li>
+<LI>Advances in Mathematics </li>
 <li>Advances in Numerical Analysis</li>
+<li>Algebraic and Geometric Topology </li>
 <li>Algebra and Number Theory</li>
+<li>Algebraic Combinatorics </li>
 <li>Algebraic Geometry</li>
+<li>Algebras and Representation Theory </li>
 <LI>American Journal of Mathematics </li>
 <li>American Mathematical Monthly</li>
 <LI>Annales d'l'Institut Fourier </li>
+<li>Annales Academi&#xe6; Scientiarum Fennic&#xe6;</i>
+<li>Annales scientifiques de l'Ecole normale sup&eacute;rieure</i>
+<li>Annali di Matematica Pura ed Applicata</li>
 <LI>Annals of Combinatorics </li>
 <LI>Annals of Mathematics </li>
 <li>Analysis and Applications</li>
 <li>Applied Mathematics and Computation</li>
+<li>Applied Algebra Engeneering Communications Computatations </li>
 <LI>Arabian Journal of Science and Engineering </li>
+<li>Arkiv f&uuml;r Mathematik </li>
+<li>Ars Combinatorica</li>
 <LI>Asian Journal of Mathematics </li>
 
 <li>Betraege zur Algebra und Geometrie </li>
@@ -53,11 +63,11 @@
 
 <LI>Discrete and Computational Geometry</li>
 <LI>Discrete Mathematics</li>
-<LI>Documenta Mathematics   </li>
+<LI>Documenta Mathematics </li>
 <LI>Duke Mathematical Journal </li>
 
 <LI>Electronic Journal of Combinatorics</li>
-<LI>Experimental Mathematics   </li>
+<LI>Experimental Mathematics </li>
 
 <LI>Formal Power Series and Algebraic Combinatorics</li>
 <LI>Foundations of Computational Mathematics</li>
@@ -80,8 +90,8 @@
 <li>Journal of Algebra and its applications</li>
 <LI>Journal of Algebraic Combinatorics</li>
 <LI>Journal of Algebraic Geometry</li>
-<LI>Journal of the AMS </li>   
-<LI>Journal of Approximation Theory </li>   
+<LI>Journal of the AMS </li> 
+<LI>Journal of Approximation Theory </li> 
 <LI>Journal of Combinatorial Theory, Series A</li>
 <LI>Journal of Combinatorics</li>
 <LI>Journal of Computational Applied Mathematics</li>
@@ -119,28 +129,29 @@
 <LI>Proceedings of the AMS</li>
 <LI>Proceedings of the National Academy of Sciences</li>
 
-<LI>Quarterly Journal of  Mathematics</li>
+<LI>Quarterly Journal of Mathematics</li>
 
 <li>Research in Number Theory</li>
 <LI>Revista Mathem&aacute;tica Complutense</li>
-<LI>Rocky Mountain Journal of  Mathematics </li>
+<LI>Rocky Mountain Journal of Mathematics </li>
 
 <li>Scuola Normale Superioure</li>
+<LI>Selecta Mathematica</li>
+<LI>Seminaire Lotharingien de Combinatoire</li>
 <LI>SIAM Journal on Applied Algebra and Geometry</li>
 <LI>SIAM Journal on Computing</li>
 <LI>SIAM Journal of Control and Optimization</li>
 <LI>SIAM Journal on Discrete Mathematics</li>
 <li>SIAM Journal on Matrix Analysis</li>
 <li>SIGMA (Symmetry, Integrability and Geometry)</li> 
-<LI>Selecta Mathematica</li>
-<LI>Seminaire Lotharingien de Combinatoire</li>
+<li>Sigma Journal of Engineering and Natural Sciences</li>
 <li>Symmetry</li>
 <li>Symposium on Computational Geometry</li>
 
 <LI>Theoretical Computer Science</li>
 <LI>Tranformation Groups</li>
-<LI>Transactions of the AMS</li>                 
-<LI>Topology</li>       
+<LI>Transactions of the AMS</li> 
+<LI>Topology</li> 
 <LI>Turkish Journal of Mathematics </li>
 </oL>
 
@@ -151,9 +162,59 @@ complete a report was <FONT color=red><B>14.7 days</B></FONT>.
 <BR><BR>
 
 <address></address>
-<i><!-- hhmts start -->Last modified: Mon Jan  9 14:52:29 EST 2017 <!-- hhmts end --></i>
+<i><!-- hhmts start -->Last modified: Mon Jan 9 14:52:29 EST 2017 <!-- hhmts end --></i>
 </body> </html>
 </BODY>
 </HTML>
 
+<li>AIMS Mathematics (all their journals) </li>
+<li>Arnold Mathematical Journal</li>
+
+
+<li>Confluentes Mathematici </li>
+<li>Computer aided design</li>
+<li>Complex Variables and Elliptic Equations </li>
+<li>CUBO </li>
+
+<li>Frontiers of Molecular Biology </li>
+<li>Fractal and Fractional </li>
+<li>Forum of Mathematics, Sigma </li>
+
+<i>Indiana University Journal Math </li>
+<li>Israel Journal of Mathematics</li>
+
+<li>European Journal of Mathematics </li>
+<li>Epijournal Geometrie Algebrique </li>
+
+
+<li>JEMS Journal of the European Mathematical Society </li>
+<li>Journal of Global Optimisation </li>
+<li>Journal of Computational Mathematics </li>
+<li>JKMS J Kor Math. Soc </li>
+<li>Journal of Industrial and Management Optimization </li>
+<li>Journal of Software for Algebra and Geometry (JSAG) </li>
+<li>Jordanian Journal of Computers</li>
+<li>Journal of Topology </li>
+<li>Journal of Singularities </li>
+
+<li>Konuralp Journal of Mathematics </li>
+
+
+<li>Journal of Mathematical Biology </li>
+
+<li>Le Matematiche </li>
+
+
+<li>Notices of the AMS</li>
+<li>Open Mathematics </li>
+
+<li>PLOS </li>
+<li>Punjab University Journal of Mathematics </li>
+<li>Proceedings of the Royal Society </li>
+
+<li>Research in the Mathematical Sciences </li>
+<li>Reports on Mathematical Physics </li>
+
+<li>Sigma Journal of Engineering and Natural Sciences </li>
+<li>Tohoku </li>
 
