--- a/conferences/Fields25/index.html
+++ b/conferences/Fields25/index.html
@@ -22,6 +22,9 @@
         26&ndash;30 May 2025, Fields Institute Toronto Canada.
       </font>
    </td>
+     <td rowspan=2 valign=center> <br><br>
+   <IMG SRC="singHouse_graph.png" ALT="A periodic graph" border=0>
+   </td>
   </tr>
   <tr><td></td>
     <td>
@@ -30,9 +33,6 @@
 	algebra and applications</a>,
       we are organizing a short course and research experience on algebraic aspects of periodic operators.
     </td>
-     <td rowspan=2>
-   <IMG SRC="singHouse_graph.png" ALT="A periodic graph" border=0>
-   </td>
 </tr>
 </table>
 <!---------------------------------------------------------------------------->
