--- a/index.html
+++ b/index.html
@@ -161,30 +161,30 @@
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Spring  2025</font></b>
+   <b><FONT SIZE=+1 color=brown>Fall 2025</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 666</font>&nbsp;</td>
-      <td><a href="teaching/25.1/RAGA.html">Real Algebraic<br> Geometry for<br>Applications</a></td>
-      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt">Sketch</a> </td>
-      <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
+    <tr valign=top><td><font color=brown>MATH 653</font>&nbsp;</td>
+      <td><a href="teaching/25.1/RAGA.html">Algebra I</a></td>
+      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt"></a> </td>
+      <td colspan=1> Tu-Th </td><td> 12:45&ndash;14:00</td><td> Blocker 121
       </td>
     </tr>
      <!-------------------------------------------------->
-    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
-     <td>  </td><td> </td>
-    </tr>
+    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> </td>
+     <td> </td><td></td>
+   </tr>
     <!-------------------------------------------------->
 <!--     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>-->
      <!-------------------------------------------------->
      <tr><td></td><td colspan=4><hr></td></tr>
     <!-------------------------------------------------->
    <tr valign=top>
-     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
-     <td> </td><td></td>
+     <td colspan=3><font color=blue><b>Honors Advising:</b></font><br>Blocker 601L</br></td>
+     <td>Summer 2025:</td><td colspan=2>Mon. &amp; Tues. &nbsp; 13:30-14:00 </td>
     </tr>
     <!-------------------------------------------------->
-     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
+     <tr valign=top><td colspan=2></td>     <td colspan=2 rowspan=3></td>
       <td>  </td><td> </td> </tr>
     <!-------------------------------------------------->
 <!--     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr> -->
