--- a/service.html
+++ b/service.html
@@ -263,14 +263,14 @@
  <ul>
   <!--------------------------------------------------------->
   <li>
-      <A HREF="http://www.ams.org/mathscinet">MathSciNet</A> Reviewer.
+      Formerly, a <A HREF="http://www.ams.org/mathscinet">MathSciNet</A> Reviewer.
        My <A HREF="http://www.ams.org/msnmain?pg3=RVCN&s3=sottile&co3=AND&pg4=TI&s4=&co4=AND&pg5=CC&s5=&co5=AND&pg6=ALLF&s6=&arg1=1940&arg2=2005&yrop=eq&arg3=&dr=all&pg2=ET&s2=All&op2=OR&co2=AND&l=20&fn=130&r=1">reviews</A>.
   </li>
   <!--------------------------------------------------------->
   <li>
       <A HREF="Journals.html">List</A> of Journals served as a referee.<br>
-  I have refereed <FONT color=red><B>77</B></FONT> articles in the past four years, taking on
-      average <FONT color=red><B>22.1 days</B></FONT> to complete each report.<br>
+  I have refereed <FONT color=red><B>70</B></FONT> articles in the past four years, taking on
+      average <FONT color=red><B>24.8 days</B></FONT> to complete each report.<br>
      <a href="images/refereeing.gif">Up-to-date graphic summary</a>.
   </li>
   <!--------------------------------------------------------->
