--- a/talks.html
+++ b/talks.html
@@ -103,9 +103,9 @@
   </td>
 
  </tr>
- <!------------------------------------------------>
+<!---------------------------------------------------------------------------------------------------->
 </table>
-<!-------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
  </td>
  </tr>
  <!---------------------------------------------------------------------------------------------------->
@@ -118,6 +118,23 @@
  <ul>
 
   <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    DiPrima Lecture, Department of Mathematics, Rensselaer Polytechnic Institute,
+     29&ndash;30 September  2025.
+    <a href="talks/25/RPI.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Minisymposium on Methods in Applied and Computational Topology and Geometry
+    at the <a href="https://sites.google.com/view/siamtxla2025/home?authuser=0">SIAM Texas-Louisiana Sectional Meeting</a>,
+     Austin, TX, 26&ndash;28 September  2025.
+    <a href="talks/25/TX-LA25.txt"></a>
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
     Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
@@ -135,7 +152,21 @@
     <a href="talks/25/AG25_Real.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Algebraic Aspects of Periodic Operators</I></font>,
+   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
+    26&ndash;30 May 2025.
+    <a href="talks/25/Fields_25.txt">abstract</a>.
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+    <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Platonic solids in the next dimension</I></font>,
     Math Club, Texas A&amp;M University,
@@ -144,13 +175,7 @@
     <a href="talks/17/4D/index.html">Visuals</a>.
     <a href="research/stories/hyperCube/index.html">Building the 4-cube</a>.
   </li>
-  <!---------------------------------------------------------------------------------------->
-   <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
