--- a/conferences/Fields25/index.html
+++ b/conferences/Fields25/index.html
@@ -48,6 +48,8 @@ This list will be updated and further annotated closer to the Fields workshop.
 
 
 <ol>
+  <li><a href="../../talks/25/Fields_25.pdf">Text of Frank's Introductory talk</a>.</li>
+  
   <li><a href="../../research/pdf/AAPGO.pdf">Algebraic Aspects of Periodic Graph Operators</a>,
     by Stephen Shipman and Frank Sottile.<br>
     <font color=maroon>This is a fairly detailed development of algebraic aspects of peroidic operators for
