--- a/research/publications.html
+++ b/research/publications.html
@@ -87,7 +87,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
      <FONT COLOR="FF00FF"><I>Algebraic Aspects of Periodic Graph Operators</I></FONT>,  
       with <A HREF="https://www.math.lsu.edu/~shipman/">Stephen Shipman</a>,   
        February 2025.
-     <tt></tt>
+     <tt>ArXiv.org/2502.03659</tt>, 24 pp.
      </TD>
     </TR>  
    </TABLE>
@@ -123,31 +123,6 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
  <TR valign=CENTER><TD align=right>4
                  </TD> <TD>
 <!------------------------------------------------------------------------>
-<!-----------------      Version of 6 June 2024       -------------------->
-<!------------------------------------------------------------------------>
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/qMurnaghan.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
-     <TD valign=center>
-       <FONT COLOR="FF00FF">
-      <I>A quantum Murnaghan--Nakayama rule for the flag manifold</I></FONT>.
-      with
-       <A HREF="https://sites.google.com/site/carobenedettimath">Carolina Benedetti</A>,
-       <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
-       <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
-       <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
-       34 pages. <tt>ArXiV.org/2406.05311</tt>
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>5
-                 </TD> <TD>
-<!------------------------------------------------------------------------>
 <!-----------------        Version of 10 May 2021        ----------------->
 <!------------------------------------------------------------------------>
 <!------------------------------------------------------------------------>
@@ -172,7 +147,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
 <!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>6
+ <TR valign=CENTER><TD align=right>5
                  </TD> <TD>
    <!--------------------------------------------------------------->             
    <!-------------      Version of August 2021     ----------------->
@@ -215,6 +190,31 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 <TABLE>
 
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>6
+</TD> <TD>
+<!------------------------------------------------------------------------>
+<!-----------------      Version of 6 June 2024       -------------------->
+<!------------------------------------------------------------------------>
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/qMurnaghan.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
+     <TD valign=center>
+       <FONT COLOR="FF00FF">
+      <I>A quantum Murnaghan--Nakayama rule for the flag manifold</I></FONT>.
+      with
+       <A HREF="https://sites.google.com/site/carobenedettimath">Carolina Benedetti</A>,
+       <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
+       <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
+       <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
+       34 pages. <tt>ArXiV.org/2406.05311</tt>
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>7
@@ -880,7 +880,7 @@ Jump to <A HREF="#preprints">preprints</A>,
 <!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>4
+ <TR valign=CENTER><TD align=right>6
 31
 </TD> <TD>
 <!------------------------------------------------------------------------>
@@ -2363,7 +2363,8 @@ Jump to <A HREF="#preprints">preprints</A>,
       with <A HREF="http://math.albany.edu:8000/math/pers/lenart/">Cristian
         Lenart</A>,  
    <A HREF="http://www.ams.org/tran/2007-359-05/S0002-9947-06-04043-8/home.html">Trans. Amer. Math. Soc.</A>, 
-      Trans. Amer. Math. Soc. <b>359</b>  (2007), 2317--2342.
+      Trans. Amer. Math. Soc. <b>359</b>  (2007), 2317--2342.<br>
+     <font color=red>The example illustrating Step 4 in Section 3.2 is wrong.  We thank Khanh Nguyen Duc for pointing this out to us.</font>
     </TR>
    </TABLE>
 <!--------------------------------------------------------------------->
