--- a/talks.html
+++ b/talks.html
@@ -157,7 +157,8 @@
     <FONT COLOR="AA00FF"><I>Algebraic Aspects of Periodic Operators</I></font>,
    <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
     26&ndash;30 May 2025.
-    <a href="talks/25/Fields_25.txt">abstract</a>.
+   <a href="talks/25/Fields_25.txt">abstract</a>.
+   <a href="talks/25/Fields_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
     <!--------------------------------------------------------------------------------------------------->
@@ -451,7 +452,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Wed Feb 26 17:51:15 CST 2025 by sottile</p>  
+<p>Last modified: Tue May 27 17:01:45 EDT 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
