--- a/conferences/Fields25/index.html
+++ b/conferences/Fields25/index.html
@@ -44,8 +44,9 @@
 Below is a list of some relevant literature in which algebraic aspects of periodic operators feature prominently.
 The first three are recommended (required) reading for all participants.<br>
 
-This list will be updated and further annotated closer to the Fields workshop.
+This list will be updated and further annotated closer to the Fields workshop.<br>
 
+<a href="../../research/stories/Bestiary/Bestiary.html">A Bestiary of Bloch Varieties</a>
 
 <ol>
   <li><a href="../../talks/25/Fields_25.pdf">Text of Frank's Introductory talk</a>.</li>
